@@ -33,6 +33,7 @@ Harald Hanche-Olsen        <hanche@math.ntnu.no>
 Hans-Bernhard Broeker      <broeker@physik.rwth-aachen.de>
 Heikki Korpela             <heko@iki.fi>
 Isamu Hasegawa             <isamu@yamato.ibm.com>
+Jaroslav Škarvada          <jskarvad@redhat.com>
 Jeff Bailey                <jbailey@nisa.net>
 Jim Hand                   <jhand@austx.tandem.com>
 Jim Meyering               <meyering@redhat.com>
