@@ -2,6 +2,10 @@ GNU grep NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  Character classes could cause a segmentation fault if they included a
+  multibyte character.  This is a regression from 2.5.4.
 
 * Noteworthy changes in release 2.6 (2010-03-23) [stable]
 
